# tauri-plugin-serialport

./: Cargo.toml  README.md  package.json
examples/serialport-test/: package.json
examples/serialport-test/src/: App.svelte
examples/serialport-test/src-tauri/: Cargo.toml
src/: api.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
